--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <!--changed this form div to image-->
-    <img src="/develop/assets/images/digital-marketing-meeting.jpg" class="hero"/>
+    <img src="./assets/digital-marketing-meeting.jpg" alt="where did you go?!" class="hero"/>
     
     <main class="content"> <!--changed this from a div to main-->
         <section id="search-engine-optimization" class="search-engine-optimization">
