--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <!--changed this form div to image-->
-    <img src="./assets/digital-marketing-meeting.jpg" alt="where did you go?!" class="hero"/>
+    <img src="./assets/digital-marketing-meeting.jpg" alt="People around a table in a marketing meeting." class="hero"/>
     
     <main class="content"> <!--changed this from a div to main-->
         <section id="search-engine-optimization" class="search-engine-optimization">
@@ -38,7 +38,7 @@
 
         <class="online-reputation-managment">
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="A laptop on a table displaying a graph with ascending numbers and colors." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -46,40 +46,38 @@
         </section>
 
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="A cluttered table with icons everywhere." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
+
     </main>
 
     <aside class="benefits"> <!--changed this from div to aside-->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="A half cog funneling into a dollar sign, implying generating leads for the business."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-
         <section class="benefit-brand"> <!--changed this from div to section-->
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="A silhouette of a person in a suit with a lightbulb for a head, indicating they are getting an idea."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-
         <section class="benefit-cost"> <!-- changed this from div to section-->
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="A cog with dollar signs around it, implying smart cost managment."/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
     </aside>
-
     <section class="footer"> <!-- Changed this from div to section-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
